added Window Data Protection API like wrapper

--- a/MediaServerManagementConsole/MediaServerManagementConsole.csproj
+++ b/MediaServerManagementConsole/MediaServerManagementConsole.csproj
@@ -10,4 +10,8 @@
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
