--- a/MediaServerManagementConsole/MediaServerManagementConsole.csproj
+++ b/MediaServerManagementConsole/MediaServerManagementConsole.csproj
@@ -2,16 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
     <BaseOutputPath>bin\</BaseOutputPath>
     <BaseIntermediateOutputPath>obj\</BaseIntermediateOutputPath>
+    <StartupObject>MediaServerManagement.Program</StartupObject>
+    <AssemblyName>MediaServerManagement</AssemblyName>
+    <RootNamespace>MediaServerManagement</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
-  </ItemGroup>
 
 </Project>
