--- a/MediaServerManagementConsole/MediaServerManagementConsole.csproj
+++ b/MediaServerManagementConsole/MediaServerManagementConsole.csproj
@@ -13,4 +13,8 @@
     <RootNamespace>MediaServerManagement</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Program.cs" />
+  </ItemGroup>
+
 </Project>
